# python-configuration

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  publish.yml  run_tests.yml
CONTRIBUTING/: index.html
changelog/: index.html
config/: __init__.py  azure.py  configuration.py  configuration_set.py  helpers.py
config/contrib/: aws.py  azure.py  gcp.py  vault.py
docs/: api.rst  conf.py  glossary.rst  index.rst  reference.md  requirements.txt
reference/: index.html
search/: search_index.json
src/config/: .gitignore  __init__.py  configuration.py  configuration_set.py  helpers.py
src/config/contrib/: __init__.py  aws.py  azure.py  gcp.py  vault.py
tests/: python_config.py  python_config_2.py  test_azure.py  test_basic.py  test_configuration_set.py  test_datatypes.py  test_dict_like.py  test_dotenv.py  test_env.py  test_ini.py  test_interpolation.py  test_issues.py  test_json.py  test_nested.py  test_path.py  test_python.py  test_toml.py  test_validation.py  test_yaml.py
tests/contrib/: __init__.py  test_aws.py  test_azure.py  test_gcp.py  test_vault.py
