[tool.poetry]
authors = ["Tiago Requeijo <tiago.requeijo.dev@gmail.com>"]
description = "A library to load configuration parameters from multiple sources and formats"
homepage = "https://github.com/tr11/python-configuration"
include = ["config/py.typed"]
keywords = ['configuration', 'settings', 'json', 'yaml', 'toml', 'ini']
license = "MIT"
name = "python-configuration"
packages = [{ include = "config" }]
readme = 'README.md'
repository = "https://github.com/tr11/python-configuration"
version = "0.9.1"

[tool.poetry.dependencies]
python = "^3.8.1"
azure-identity = { version = "^1.13.0", optional = true }
azure-keyvault = { version = "^4.2.0", optional = true }
boto3 = { version = "^1.28.20", optional = true }
google-cloud-secret-manager = { version = "^2.16.3", optional = true }
hvac = { version ="^1.1.1", optional = true }
pyyaml = { version = "^6.0", optional = true }
toml = { version = "^0.10.0", optional = true }
jsonschema = { version = "^4.18.6", optional = true }

[tool.poetry.group.dev.dependencies]
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.3"
flake8-import-order = "^0.18.0"
mypy = "^1.4.1"
pydocstyle = "^6.0"
pytest = "^7.4.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.1.0"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.10.3"
pytest-mock = "^3.5.0"
sphinx = "^7.1.2"
sphinx-autodoc-typehints = "^1.24.0"
black = "^23.7.0"

[tool.poetry.extras]
aws = ["boto3"]
azure = ["azure-keyvault", "azure-identity"]
gcp = ["google-cloud-secret-manager"]
toml = ["toml"]
vault = ["hvac"]
yaml = ["pyyaml"]
validation = ["jsonschema"]

[tool.black]
line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38, py39, py310, py311

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v --all-extras
    poetry run pytest
"""

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_subclassing_any = true
disallow_any_decorated = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [   
    'tests'
]

[[tool.mypy.overrides]]
module= [
    'google.auth.credentials', 
    'yaml', 
    'toml', 
    'boto3',
    'botocore.exceptions', 
    'hvac',
    'hvac.exceptions',
    'jsonschema',
    'jsonschema.exceptions'
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
include = [
    'config/*'
]

[tool.coverage.html]
directory = 'cover'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = '--cov --cov-report=html --cov-report term-missing --flake8 --mypy --black'
flake8-max-line-length = 88
flake8-extensions =[
    'flake8-docstrings',
    'flake8-comprehensions',
    'flake8-import-order',
    'flake8-bugbear',
    'flake8-blind-except',
    'flake8-builtins',
    'flake8-logging-format',
    'flake8-black'
]
flake8-ignore = [
    '* E203',
    'tests/* ALL',
    'docs/* ALL'
    ]
filterwarnings =[
    'ignore::pytest.PytestDeprecationWarning',
    'ignore::DeprecationWarning',
    'ignore::pytest.PytestWarning'
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.5.0"]
